<resources>
    <string name="app_name">Sandoken</string>
    <string name="welcome_text">Welcome on Sandoken</string>
    <string name="welcome_btn">Play</string>
    <string name="stats_btn">Statistics</string>
    <string name="win_message_title">Congratulations!</string>
    <string name="win_message_desc">Congratulations, you finished this grid!\n XYZ% of players have succeeded this Sandoken!\n ABC player(s) have finished this Sandoken</string>
    <string name="mode_crayon_label">Pencil mode</string>
    <string name="edition_stylo">STYLO</string>
    <string name="edition_crayon">CRAYON</string>
...
